@@ -1,92 +1,163 @@
+// src/main/java/ec/edu/ups/icc/fundamentos01/products/services/ProductServiceImpl.java
 package ec.edu.ups.icc.fundamentos01.products.services;
 
+import ec.edu.ups.icc.fundamentos01.categories.entities.CategoryEntity;
+import ec.edu.ups.icc.fundamentos01.categories.repositories.CategoryRepository;
 import ec.edu.ups.icc.fundamentos01.products.dtos.CreateProductDto;
 import ec.edu.ups.icc.fundamentos01.products.dtos.PartialUpdateProductDto;
 import ec.edu.ups.icc.fundamentos01.products.dtos.ProductResponseDto;
 import ec.edu.ups.icc.fundamentos01.products.dtos.UpdateProductDto;
-import ec.edu.ups.icc.fundamentos01.products.entities.Product;
 import ec.edu.ups.icc.fundamentos01.products.entities.ProductEntity;
-import ec.edu.ups.icc.fundamentos01.products.exception.domain.BadRequestException;
-import ec.edu.ups.icc.fundamentos01.products.exception.domain.ConflictException;
 import ec.edu.ups.icc.fundamentos01.products.exception.domain.NotFoundException;
-import ec.edu.ups.icc.fundamentos01.products.mappers.ProductMapper;
 import ec.edu.ups.icc.fundamentos01.products.repositories.ProductRepository;
+import ec.edu.ups.icc.fundamentos01.users.entities.UserEntity;
+import ec.edu.ups.icc.fundamentos01.users.repositories.UserRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements ProductService {
 
-    private final ProductRepository repo;
+    private final ProductRepository productRepository;
+    private final CategoryRepository categoryRepository;
+    private final UserRepository userRepository;
 
-    public ProductServiceImpl(ProductRepository repo) {
-        this.repo = repo;
+    public ProductServiceImpl(
+            ProductRepository productRepository,
+            CategoryRepository categoryRepository,
+            UserRepository userRepository) {
+        this.productRepository = productRepository;
+        this.categoryRepository = categoryRepository;
+        this.userRepository = userRepository;
     }
 
     @Override
     public ProductResponseDto create(CreateProductDto dto) {
+        UserEntity owner = userRepository.findById(dto.userId)
+                .orElseThrow(() -> new NotFoundException("Usuario no encontrado con ID: " + dto.userId));
 
-        if (dto.name == null || dto.name.isBlank() || dto.name.length() < 3) {
-            throw new BadRequestException("Nombre inválido");
-        }
+        CategoryEntity category = categoryRepository.findById(dto.categoryId)
+                .orElseThrow(() -> new NotFoundException("Categoría no encontrada con ID: " + dto.categoryId));
 
-        if (repo.findByName(dto.name).isPresent()) {
-            throw new ConflictException("El producto ya existe");
-        }
+        ProductEntity product = new ProductEntity();
+        product.setName(dto.name);
+        product.setPrice(dto.price);
+        product.setDescription(dto.description);
+        product.setStock(dto.stock != null ? dto.stock : 0); // ⭐ Esta es la línea correcta
+        product.setCategory(category);
+        product.setOwner(owner);
 
-        Product product = ProductMapper.fromCreateDto(dto);
-        ProductEntity saved = repo.save(ProductMapper.toEntity(product));
-
-        return ProductMapper.toResponse(ProductMapper.fromEntity(saved));
+        ProductEntity saved = productRepository.save(product); // ⭐ Guarda primero
+        return toResponseDto(saved); // ⭐ Luego retorna
     }
 
     @Override
     public List<ProductResponseDto> findAll() {
-        return repo.findAll().stream()
-                .map(ProductMapper::fromEntity)
-                .map(ProductMapper::toResponse)
-                .collect(Collectors.toList());
+        return productRepository.findAll().stream()
+                .map(this::toResponseDto)
+                .toList();
     }
 
     @Override
     public ProductResponseDto findOne(int id) {
-        ProductEntity entity = repo.findById((long) id)
-                .orElseThrow(() ->
-                        new NotFoundException("Producto no encontrado")
-                );
+        ProductEntity entity = productRepository.findById((long) id)
+                .orElseThrow(() -> new NotFoundException("Producto no encontrado con ID: " + id));
+        return toResponseDto(entity);
+    }
 
-        return ProductMapper.toResponse(
-                ProductMapper.fromEntity(entity)
-        );
+    @Override
+    public List<ProductResponseDto> findByUserId(Long userId) {
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("Usuario no encontrado con ID: " + userId);
+        }
+        return productRepository.findByOwnerId(userId).stream()
+                .map(this::toResponseDto)
+                .toList();
+    }
+
+    @Override
+    public List<ProductResponseDto> findByCategoryId(Long categoryId) {
+        if (!categoryRepository.existsById(categoryId)) {
+            throw new NotFoundException("Categoría no encontrada con ID: " + categoryId);
+        }
+        return productRepository.findByCategoryId(categoryId).stream()
+                .map(this::toResponseDto)
+                .toList();
     }
 
     @Override
     public ProductResponseDto update(int id, UpdateProductDto dto) {
-        ProductEntity entity = repo.findById((long) id)
-                .orElseThrow(() ->
-                        new NotFoundException("Producto no encontrado")
-                );
+        ProductEntity product = productRepository.findById((long) id)
+                .orElseThrow(() -> new NotFoundException("Producto no encontrado con ID: " + id));
 
-        Product product = ProductMapper.fromEntity(entity);
-        product = ProductMapper.fromUpdateDto(dto, product);
+        CategoryEntity category = categoryRepository.findById(dto.categoryId)
+                .orElseThrow(() -> new NotFoundException("Categoría no encontrada con ID: " + dto.categoryId));
 
-        ProductEntity updated = repo.save(ProductMapper.toEntity(product));
-        return ProductMapper.toResponse(ProductMapper.fromEntity(updated));
+        product.setName(dto.name);
+        product.setPrice(dto.price);
+        product.setDescription(dto.description);
+        product.setStock(dto.stock);
+        product.setCategory(category);
+
+        ProductEntity updated = productRepository.save(product);
+        return toResponseDto(updated);
     }
 
     @Override
     public ProductResponseDto partialUpdate(int id, PartialUpdateProductDto dto) {
-        ProductEntity entity = repo.findById((long) id)
-                .orElseThrow(() ->
-                        new NotFoundException("Producto no encontrado")
-                );
+        ProductEntity product = productRepository.findById((long) id)
+                .orElseThrow(() -> new NotFoundException("Producto no encontrado con ID: " + id));
 
-        Product product = ProductMapper.fromEntity(entity);
-        product = ProductMapper.fromPartialDto(dto, product);
+        if (dto.name != null && !dto.name.isBlank()) {
+            product.setName(dto.name);
+        }
+        if (dto.price != null) {
+            product.setPrice(dto.price);
+        }
+        if (dto.stock != null) {
+            product.setStock(dto.stock);
+        }
+        if (dto.categoryId != null) {
+            CategoryEntity category = categoryRepository.findById(dto.categoryId)
+                    .orElseThrow(() -> new NotFoundException("Categoría no encontrada"));
+            product.setCategory(category);
+        }
 
-        ProductEntity updated = repo.save(ProductMapper.toEntity(product));
-        return ProductMapper.toResponse(ProductMapper.fromEntity(updated));
+        ProductEntity updated = productRepository.save(product);
+        return toResponseDto(updated);
+    }
+
+    @Override
+    public void delete(int id) {
+        ProductEntity product = productRepository.findById((long) id)
+                .orElseThrow(() -> new NotFoundException("Producto no encontrado con ID: " + id));
+        productRepository.delete(product);
+    }
+
+    private ProductResponseDto toResponseDto(ProductEntity entity) {
+        ProductResponseDto dto = new ProductResponseDto();
+        dto.id = entity.getId();
+        dto.name = entity.getName();
+        dto.price = entity.getPrice();
+        dto.description = entity.getDescription();
+        dto.stock = entity.getStock();
+
+        ProductResponseDto.UserSummaryDto userDto = new ProductResponseDto.UserSummaryDto();
+        userDto.id = entity.getOwner().getId();
+        userDto.name = entity.getOwner().getName();
+        userDto.email = entity.getOwner().getEmail();
+        dto.user = userDto;
+
+        ProductResponseDto.CategoryResponseDto categoryDto = new ProductResponseDto.CategoryResponseDto();
+        categoryDto.id = entity.getCategory().getId();
+        categoryDto.name = entity.getCategory().getName();
+        categoryDto.description = entity.getCategory().getDescription();
+        dto.category = categoryDto;
+
+        dto.createdAt = entity.getCreatedAt();
+        dto.updatedAt = entity.getUpdatedAt();
+
+        return dto;
     }
 }
